@@ -1,7 +1,9 @@
 """ Public Depiction Interfaces
 """
 from eea.depiction.content.interfaces import IDepictionTool
+from eea.depiction.vocabularies.interfaces import IDepictionVocabulary
 
 __all__ = (
     IDepictionTool.__name__,
+    IDepictionVocabulary.__name__,
 )
