@@ -1,0 +1,10 @@
+<configure
+  xmlns="http://namespaces.zope.org/zope"
+  i18n_domain="eea">
+
+  <utility
+    name="eea.depiction"
+    provides="eea.depiction.interfaces.IDepictionVocabulary"
+    factory=".DepictionVocabulary" />
+
+</configure>
