@@ -1,0 +1,8 @@
+""" Vocabularies interfaces
+"""
+from zope.interface import Interface
+
+class IDepictionVocabulary(Interface):
+    """ Add a utility for this interface in order to provide custom fallback
+    images for context interfaces
+    """
