@@ -6,6 +6,8 @@ Changelog
 * Upgrade step: Within "Plone > Site setup > Add-ons" click on
   upgrade button available for eea.depiction or install 'EEA Depiction' if it's
   not already installed.
+* Feature: Added utilities IDepictionTool and IDepictionVocabulary
+  [voineali refs #5497]
 * Feature: Made p4a.video dependency optional
   [voineali refs #5497]
 * Change: Refactoring valentine.imagescales to eea.depiction
